<resources>
    <string name="app_name">Dreamer</string>
    <string name="welcome">Bienvenido</string>
    <string name="access_email_password">Accede con tu UDI y Código</string>
    <string name="login">Iniciar Sesión</string>
    <string name="connecting_to_device">Conectándo con el dispositivo ...</string>
    <string name="device_connected">¡Conectado correctamente!</string>
    <string name="checking_device">Comprobando el dispositivo...</string>
    <string name="device_correct">Dispositivo colocado correctamente</string>
    <string name="start_soon">Empezaremos pronto, así que preparémonos</string>
    <string name="try_searching_calm">Intenta buscar un espacio tranquilo, libre de distracciones.</string>
    <string name="will_need">Lo necesitarás...</string>
    <string name="lets_start">Empecemos</string>
    <string name="lets_get_started">Empecemos</string>
    <string name="next">Siguiente</string>
    <string name="back">Volver</string>
    <string name="detect_area">Detectar área para posicionar dispositivo</string>
    <string name="clean_area">Limpiar el área</string>
    <string name="couple_stickers">Pegatinas de pareja y dispositivos</string>
    <string name="remove_protector">Retire el protector de la pegatina.</string>
    <string name="position_device">Coloque el dispositivo</string>
    <string name="check_device">Comprobar dispositivo</string>
    <string name="relaxation_exercise">Ejercicio de relajación</string>
    <string name="brief_explanation">Brief explanation of the relaxing exercise here will think on how to communicate</string>
    <string name="lets_go">Empezar</string>
    <string name="repeat">Repita el ejercicio</string>
    <string name="next_step">Siguiente paso</string>
    <string name="close_eyes">Cierra los ojos y respira hondo</string>
    <string name="open_eyes">Abre los ojos y respira hondo</string>
    <string name="relaxation_completed">Prueba de relajación completada</string>
    <string name="neuronup_test">Prueba neuronup</string>
    <string name="external_site">need to add this goes to an external site and will loose context but as soon as they finished they will come back here</string>
    <string name="test_completed">Ejercicio completado correctamente</string>
    <string name="clean">Limpiar</string>
    <string name="leaving_material">Description of importance of leaving material clean and well position these are instructions for you to follow</string>
    <string name="already_know">Ya lo sé, ¡adiós!</string>
    <string name="rate">Antes de partir, ¿Cómo calificaría su experiencia?</string>
    <string name="final_titol">Gracias por participar!</string>
    <string name="desconexio">Retirar dispositivo</string>
    <string name="salir">Salir</string>
    <string name="conexio">Conexión</string>
    <string name="relax">Relajación</string>
    <string name="realitzacio_exercici">Realización del ejercicio</string>
</resources>