<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="activity"
            type="com.otcengineering.dreamer.views.activity.WrapActivity" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:paddingTop="@dimen/_20sdp"
            android:paddingBottom="@dimen/_20sdp"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_completed"
                android:textAlignment="center"
                android:textColor="#000000"
                android:drawablePadding="10dip"
                android:drawableStart="@drawable/checked"
                android:textSize="@dimen/_10ssp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desconexio"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="@dimen/_18ssp"
                android:layout_marginTop="@dimen/_16sdp"
                android:textStyle="bold" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:weightSum="1" >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="#5A5A5A"
                    android:drawablePadding="10dip"
                    android:drawableStart="@drawable/ic_outline_auto_awesome_24"
                    android:text="@string/clean" />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:drawablePadding="10dip"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:drawableStart="@drawable/timer"
                    android:text="Total Duración: 5 Minutos" />
            </LinearLayout>

            <TextView
                android:layout_width="@dimen/_280sdp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#000000"
                android:text="@string/leaving_material"
                android:textSize="@dimen/_9ssp" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_12sdp"
                android:weightSum="1" >

                <Button
                    android:id="@+id/already_know"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:width="@dimen/_80sdp"
                    android:height="@dimen/_25sdp"
                    android:textColor="#FFFFFF"
                    android:backgroundTint="#7DA6AA"
                    android:text="@string/already_know"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/lets_go"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:width="@dimen/_80sdp"
                    android:height="@dimen/_25sdp"
                    android:textColor="#FFFFFF"
                    android:backgroundTint="#00838F"
                    android:text="@string/lets_go"
                    android:textAllCaps="false" />

            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>