<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="activity"
            type="com.otcengineering.dreamer.views.activity.Step2Activity" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="@dimen/_108sdp"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relax"
                android:textColor="#000000"
                android:layout_weight="1"
                android:drawablePadding="10dip"
                android:textSize="@dimen/_8ssp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="10dip"
                android:gravity="end"
                android:textColor="#000000"
                android:textSize="@dimen/_8ssp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="@dimen/_25sdp"
                android:progress="100"
                android:layout_marginRight="@dimen/_3sdp"
                android:layout_height="@dimen/_10sdp" />
            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:id="@+id/progressbar"
                android:layout_width="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_3sdp"
                android:layout_height="@dimen/_10sdp" />
            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_3sdp"
                android:layout_height="@dimen/_10sdp" />
            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_10sdp" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/fragment"
            android:layout_width="@dimen/_400sdp"
            android:layout_height="@dimen/_200sdp"/>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:width="@dimen/_80sdp"
                android:height="@dimen/_25sdp"
                android:textColor="#000000"
                android:backgroundTint="#E3A1A1"
                android:text="@string/repeat"
                android:textAllCaps="false"
                android:layout_marginRight="@dimen/_50sdp"/>

            <Button
                android:id="@+id/lets_go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:width="@dimen/_80sdp"
                android:height="@dimen/_25sdp"
                android:textColor="#FFFFFF"
                android:backgroundTint="#00838F"
                android:text="@string/lets_go"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/next_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:width="@dimen/_90sdp"
                android:height="@dimen/_25sdp"
                android:textColor="#000000"
                android:backgroundTint="#DDDDDD"
                android:text="@string/next_step"
                android:textAllCaps="false"
                android:layout_marginLeft="@dimen/_50sdp"/>

        </LinearLayout>



    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>