<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="activity"
            type="com.otcengineering.dreamer.views.activity.Step3Activity" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:gravity="center"
            android:layout_width="@dimen/_108sdp"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/realitzacio_exercici"
                android:textColor="#000000"
                android:layout_weight="1"
                android:drawablePadding="10dip"
                android:textSize="@dimen/_8ssp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="10dip"
                android:gravity="end"
                android:textColor="#000000"
                android:textSize="@dimen/_8ssp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="@dimen/_25sdp"
                android:progress="100"
                android:layout_marginRight="@dimen/_3sdp"
                android:layout_height="@dimen/_10sdp" />
            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:progress="100"
                android:layout_width="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_3sdp"
                android:layout_height="@dimen/_10sdp" />
            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_3sdp"
                android:layout_height="@dimen/_10sdp" />
            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_10sdp" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_60sdp"
            android:weightSum="1" >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#5A5A5A"
                android:drawablePadding="10dip"
                android:drawableStart="@drawable/file"
                android:text="Paso 3" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:drawablePadding="10dip"
                android:layout_marginLeft="@dimen/_10sdp"
                android:drawableStart="@drawable/timer"
                android:text="Duration: 15 Minutes" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginBottom="@dimen/_6sdp"
            android:text="@string/neuronup_test"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textColor="#000000"
            android:text="@string/external_site"
            android:textSize="@dimen/_9ssp"
            android:layout_marginBottom="@dimen/_70sdp"/>

        <Button
            android:id="@+id/lets_go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:width="@dimen/_80sdp"
            android:height="@dimen/_25sdp"
            android:textColor="#FFFFFF"
            android:backgroundTint="#00838F"
            android:text="@string/lets_go"
            android:textAllCaps="false" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>