<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="activity"
            type="com.otcengineering.dreamer.views.activity.LoginActivity" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="@dimen/_210sdp"
            android:paddingTop="@dimen/_30sdp"
            android:paddingBottom="@dimen/_30sdp"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:background="#FFF"
            android:elevation="10dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="#000000"
                android:textStyle="bold"
                android:text="@string/access_email_password"
                android:textSize="@dimen/_9ssp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="outline"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="UDI del dispositivo">
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@={activity.UDI}" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline"
                app:boxBackgroundColor="@color/white"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="Código">
                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={activity.codi}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_12sdp"
                android:width="@dimen/_170sdp"
                android:height="@dimen/_25sdp"
                android:textColor="#FFFFFF"
                android:backgroundTint="#00838F"
                android:onClick="@{() -> activity.login()}"
                android:text="@string/login"
                android:textAllCaps="false" />

        </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>
</layout>